sni/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: hello-world
  name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-world
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-world
    spec:
      containers:
      - image: gcr.io/google-samples/node-hello:1.0
        name: hello-world
        ports:
        - containerPort: 8080

---
  apiVersion: v1
  kind: Service
  metadata:
    labels:
      app.kubernetes.io/name: hello-world
    name: hello-world-service
  spec:
    type: ClusterIP
    selector:
      app.kubernetes.io/name: hello-world
      tier: backend
    ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
